--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,17 @@ php:
     - 5.4
 
 env:
-    - REPORT_EXIT_STATUS=1 TEST_PHP_EXECUTABLE=./sapi/cli/php DB=mysql
+    - REPORT_EXIT_STATUS=1 TEST_PHP_EXECUTABLE=./sapi/cli/php
 
 before_script:
     # Compile PHP
     - ./travis/compile.sh
-    # Create the MySQL test DB
-    - mysql -u root -e "CREATE DATABASE test"
+    # Setup Extensions 
+    - ./travis/ext/mysql/setup.sh
+    - ./travis/ext/mysqli/setup.sh
+    - ./travis/ext/pdo_mysql/setup.sh
+    - ./travis/ext/pgsql/setup.sh
+    - ./travis/ext/pdo_pgsql/setup.sh
 
 # Run PHPs run-tests.php 
 script: ./sapi/cli/php run-tests.php -g "FAIL,XFAIL,BORK,WARN,LEAK,SKIP"
