--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ notifications:
     email:
         recipients:
             - php-qa@lists.php.net
-        on_success: change # [always|never|change] default: change
-        on_failure: always # [always|never|change] default: always
+        on_success: never # [always|never|change] default: change
+        on_failure: never # [always|never|change] default: always
 
 env:
     - REPORT_EXIT_STATUS=1 TEST_PHP_EXECUTABLE=./sapi/cli/php
