Fixed bug #62795 (Zip extension version not defined)

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,7 @@ ext/dba/libflatfile/flatfile.c  ident
 ext/dba/libcdb/cdb_make.c       ident
 ext/dba/libcdb/cdb.c            ident
 ext/filter/filter.c             ident
+ext/zip/php_zip.c               ident
 README.input_filter             ident
 run-tests.php                   ident
 sapi/nsapi/nsapi.c              ident
