--- a/ext/spl/package.xml
+++ b/ext/spl/package.xml
@@ -26,6 +26,8 @@ standard problems.
    <file role="src" name="php_spl.h"/>
    <file role="src" name="spl_array.c"/>
    <file role="src" name="spl_array.h"/>
+   <file role="src" name="spl_filters.c"/>
+   <file role="src" name="spl_filters.h"/>
    <file role="src" name="spl_directory.c"/>
    <file role="src" name="spl_directory.h"/>
    <file role="src" name="spl_engine.c"/>
@@ -34,6 +36,8 @@ standard problems.
    <file role="src" name="spl_functions.h"/>
    <file role="src" name="spl_iterators.c"/>
    <file role="src" name="spl_iterators.h"/>
+   <file role="src" name="spl_validators.c"/>
+   <file role="src" name="spl_validators.h"/>
    <file role="doc" name="CREDITS"/>
    <file role="doc" name="README"/>
    <file role="doc" name="TODO"/>
