--- a/ext/oci8/package.xml
+++ b/ext/oci8/package.xml
@@ -46,7 +46,7 @@ http://pear.php.net/dtd/package-2.0.xsd">
  </stability>
  <license uri="http://www.php.net/license">PHP</license>
  <notes>
-   Fixed bug 60901 (Improve installation "tail" syntax for AIX)
+   Fixed bug #60901 (Improve "tail" syntax for AIX installation)
  </notes>
  <contents>
   <dir name="/">
