fix enchant dicts

--- a/.github/actions/apt-x64/action.yml
+++ b/.github/actions/apt-x64/action.yml
@@ -17,6 +17,8 @@ runs:
                 pkgconf \
                 mysql-client \
                 aspell-dev \
+                hunspell-dev \
+                hunspell-en \
                 bzip2-dev \
                 curl-dev \
                 freetype-dev \
