--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -121,6 +121,8 @@ jobs:
             -d zend_extension=opcache.so
             -d opcache.enable_cli=1
             -d opcache.jit_buffer_size=16M
+      - name: Verify generated files are up to date
+        uses: ./.github/actions/verify-generated-files
   MACOS_DEBUG_NTS:
     runs-on: macos-11
     steps:
