--- a/.github/actions/apt-x64/action.yml
+++ b/.github/actions/apt-x64/action.yml
@@ -6,59 +6,93 @@ runs:
       run: |
         set -x
 
-        sudo apt-get update
-        sudo apt-get install \
-          bison \
-          re2c \
-          locales \
-          ldap-utils \
-          openssl \
-          slapd \
-          language-pack-de \
-          libgmp-dev \
-          libicu-dev \
-          libtidy-dev \
-          libenchant-2-dev \
-          libaspell-dev \
-          libpspell-dev \
-          libsasl2-dev \
-          libxpm-dev \
-          libzip-dev \
-          libsqlite3-dev \
-          libwebp-dev \
-          libonig-dev \
-          libkrb5-dev \
-          libgssapi-krb5-2 \
-          libcurl4-openssl-dev \
-          libxml2-dev \
-          libxslt1-dev \
-          libpq-dev \
-          libreadline-dev \
-          libldap2-dev \
-          libsodium-dev \
-          libargon2-0-dev \
-          libmm-dev \
-          libsnmp-dev \
-          postgresql \
-          postgresql-contrib \
-          snmpd \
-          snmp-mibs-downloader \
-          freetds-dev \
-          unixodbc-dev \
-          llvm \
-          libc-client-dev \
-          dovecot-core \
-          dovecot-pop3d \
-          dovecot-imapd \
-          sendmail \
-          firebird-dev \
-          liblmdb-dev \
-          libtokyocabinet-dev \
-          libdb-dev \
-          libqdbm-dev \
-          libjpeg-dev \
-          libpng-dev \
-          libfreetype6-dev
+        if [ -f /etc/alpine-release ]; then
+            apk update -q
+            apk add \
+                build-base \
+                autoconf \
+                bison \
+                re2c \
+                pkgconf \
+                aspell-dev \
+                bzip2-dev \
+                curl-dev \
+                freetype-dev \
+                gettext-dev \
+                gnu-libiconv-dev \
+                gmp-dev \
+                icu-dev \
+                jpeg-dev \
+                libffi-dev \
+                libpng-dev \
+                libsodium-dev \
+                libwebp-dev \
+                libxml2-dev \
+                libxpm-dev \
+                libxslt-dev \
+                libzip-dev \
+                oniguruma-dev \
+                openssl-dev \
+                readline-dev \
+                sqlite-dev \
+                tidyhtml-dev \
+                tzdata
+        else
+            export ENV DEBIAN_FRONTEND=noninteractive
+            apt-get -y -qq update
+            apt-get install -y -q \
+                bison \
+                re2c \
+                locales \
+                ldap-utils \
+                openssl \
+                slapd \
+                language-pack-de \
+                libgmp-dev \
+                libicu-dev \
+                libtidy-dev \
+                libenchant-2-dev \
+                libaspell-dev \
+                libpspell-dev \
+                libsasl2-dev \
+                libxpm-dev \
+                libzip-dev \
+                libsqlite3-dev \
+                libwebp-dev \
+                libonig-dev \
+                libkrb5-dev \
+                libgssapi-krb5-2 \
+                libcurl4-openssl-dev \
+                libxml2-dev \
+                libxslt1-dev \
+                libpq-dev \
+                libreadline-dev \
+                libldap2-dev \
+                libsodium-dev \
+                libargon2-0-dev \
+                libmm-dev \
+                libsnmp-dev \
+                postgresql \
+                postgresql-contrib \
+                snmpd \
+                snmp-mibs-downloader \
+                freetds-dev \
+                unixodbc-dev \
+                llvm \
+                libc-client-dev \
+                dovecot-core \
+                dovecot-pop3d \
+                dovecot-imapd \
+                sendmail \
+                firebird-dev \
+                liblmdb-dev \
+                libtokyocabinet-dev \
+                libdb-dev \
+                libqdbm-dev \
+                libjpeg-dev \
+                libpng-dev \
+                libfreetype6-dev
+        fi
 
         mkdir /opt/oracle
         wget -nv https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linuxx64.zip
