--- a/.github/actions/install-linux/action.yml
+++ b/.github/actions/install-linux/action.yml
@@ -5,9 +5,9 @@ runs:
     - shell: bash
       run: |
         set -x
-        sudo make install
-        sudo mkdir     /etc/php.d
-        sudo chmod 777 /etc/php.d
+        make install
+        mkdir     /etc/php.d
+        chmod 777 /etc/php.d
         echo mysqli.default_socket=/var/run/mysqld/mysqld.sock    > /etc/php.d/mysqli.ini
         echo pdo_mysql.default_socket=/var/run/mysqld/mysqld.sock > /etc/php.d/pdo_mysql.ini
         echo extension=oci8.so    > /etc/php.d/oci8.ini
