--- a/.github/actions/setup-x64/action.yml
+++ b/.github/actions/setup-x64/action.yml
@@ -6,22 +6,26 @@ runs:
       run: |
         set -x
 
-        service mysql start
-        service slapd start
-        mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS test"
-        # Ensure local_infile tests can run.
-        mysql -uroot -proot -e "SET GLOBAL local_infile = true"
-        docker exec sql1 /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U SA -P "<YourStrong@Passw0rd>" -Q "create login pdo_test with password='password', check_policy=off; create user pdo_test for login pdo_test; grant alter, control to pdo_test;"
-        locale-gen de_DE
+        if [ -f /etc/alpine-release ]; then
+            echo "TODO SETUP"
+        else
+            service mysql start
+            service slapd start
+            mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS test"
+            # Ensure local_infile tests can run.
+            mysql -uroot -proot -e "SET GLOBAL local_infile = true"
+            docker exec sql1 /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U SA -P "<YourStrong@Passw0rd>" -Q "create login pdo_test with password='password', check_policy=off; create user pdo_test for login pdo_test; grant alter, control to pdo_test;"
+            locale-gen de_DE
 
-        ./.github/scripts/setup-slapd.sh
+            ./.github/scripts/setup-slapd.sh
 
-        cp ext/snmp/tests/snmpd.conf /etc/snmp
-        cp ext/snmp/tests/bigtest /etc/snmp
-        service snmpd restart
+            cp ext/snmp/tests/snmpd.conf /etc/snmp
+            cp ext/snmp/tests/bigtest /etc/snmp
+            service snmpd restart
 
-        groupadd -g 5000 vmail
-        useradd -m -d /var/vmail -s /bin/false -u 5000 -g vmail vmail
-        cp ext/imap/tests/setup/dovecot.conf /etc/dovecot/dovecot.conf
-        cp ext/imap/tests/setup/dovecotpass /etc/dovecot/dovecotpass
-        service dovecot restart
+            groupadd -g 5000 vmail
+            useradd -m -d /var/vmail -s /bin/false -u 5000 -g vmail vmail
+            cp ext/imap/tests/setup/dovecot.conf /etc/dovecot/dovecot.conf
+            cp ext/imap/tests/setup/dovecotpass /etc/dovecot/dovecotpass
+            service dovecot restart
+        fi
