--- a/.github/actions/test-linux/action.yml
+++ b/.github/actions/test-linux/action.yml
@@ -12,13 +12,13 @@ runs:
     - shell: bash
       run: |
         set -x
-        export MYSQL_TEST_USER=root
-        export MYSQL_TEST_PASSWD=root
+        export MYSQL_TEST_USER=useru
+        export MYSQL_TEST_PASSWD=userp
         if [[ -z "$PDO_MYSQL_TEST_DSN" ]]; then
           export PDO_MYSQL_TEST_DSN="mysql:host=localhost;dbname=test"
         fi
-        export PDO_MYSQL_TEST_USER=root
-        export PDO_MYSQL_TEST_PASS=root
+        export PDO_MYSQL_TEST_USER=useru
+        export PDO_MYSQL_TEST_PASS=userp
         export PDO_DBLIB_TEST_DSN="dblib:host=127.0.0.1;dbname=master;version=7.0"
         export PDO_DBLIB_TEST_USER="pdo_test"
         export PDO_DBLIB_TEST_PASS="password"
