--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -148,6 +148,7 @@ asan_task:
         `#--with-pdo-dblib`
         --enable-werror
         CFLAGS='-fsanitize=undefined,address -DZEND_TRACK_ARENA_ALLOC'
+        CXXFLAGS='-fsanitize=undefined,address -DZEND_TRACK_ARENA_ALLOC'
         LDFLAGS='-fsanitize=undefined,address'
         CC=clang
         CXX=clang++
