.cirrus.yml: add -Wassign-enum
To find mistakes with enums.

See https://github.com/php/php-src/pull/10617#pullrequestreview-1305655803

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -147,7 +147,7 @@ asan_task:
         `#--with-pdo-firebird`
         `#--with-pdo-dblib`
         --enable-werror
-        CFLAGS='-fsanitize=undefined,address -DZEND_TRACK_ARENA_ALLOC'
+        CFLAGS='-fsanitize=undefined,address -DZEND_TRACK_ARENA_ALLOC -Wassign-enum'
         LDFLAGS='-fsanitize=undefined,address'
         CC=clang
         CXX=clang++
