--- a/scripts/phpize.in
+++ b/scripts/phpize.in
@@ -10,6 +10,7 @@ builddir="`pwd`"
 SED="@SED@"
 
 FILES_BUILD="php.m4 shtool libtool.m4 ax_check_compile_flag.m4 ax_gcc_func_attribute.m4 php_cxx_compile_stdcxx.m4 pkg.m4 \
+    ax_require_defined.m4 ax_append_flag.m4 ax_append_compile_flags.m4 \
     config.guess config.sub ltmain.sh Makefile.global gen_stub.php"
 FILES="run-tests*.php"
 CLEAN_FILES="$FILES *.o *.lo *.la .libs/ build/ modules/ \
