--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,6 +42,8 @@ jobs:
         uses: ./.github/actions/setup-mssql
       - name: Create Oracle container
         uses: ./.github/actions/setup-oracle
+      - name: Setup Caddy server
+        uses: ./.github/actions/setup-caddy
       - name: apt
         uses: ./.github/actions/apt-x64
       - name: ccache
@@ -66,6 +68,8 @@ jobs:
         uses: ./.github/actions/setup-x64
       - name: Test
         uses: ./.github/actions/test-linux
+        env:
+          RUN_CADDY_TESTS: "1"
       - name: Test Tracing JIT
         uses: ./.github/actions/test-linux
         with:
@@ -73,6 +77,8 @@ jobs:
             -d zend_extension=opcache.so
             -d opcache.enable_cli=1
             -d opcache.jit_buffer_size=16M
+        env:
+          RUN_CADDY_TESTS: "1"
       - name: Verify generated files are up to date
         uses: ./.github/actions/verify-generated-files
   LINUX_X32:
