--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Generate Matrix
         id: set-matrix
         run: php .github/nightly_matrix.php "${{ github.event_name }}" "${{ github.run_attempt }}"
-  LINUX_X64:
+  LINUX_X86_64:
     needs: GENERATE_MATRIX
     if: ${{ needs.GENERATE_MATRIX.outputs.branches != '[]' }}
     strategy:
@@ -44,7 +44,7 @@ jobs:
         test_function_jit: [true]
         zts: [true, false]
         include: ${{ fromJson(needs.GENERATE_MATRIX.outputs.matrix-include) }}
-    name: "${{ matrix.branch.name }}_LINUX_X64${{ matrix.name }}_${{ matrix.debug && 'DEBUG' || 'RELEASE' }}_${{ matrix.zts && 'ZTS' || 'NTS' }}"
+    name: "${{ matrix.branch.name }}_LINUX_X86_64${{ matrix.name }}_${{ matrix.debug && 'DEBUG' || 'RELEASE' }}_${{ matrix.zts && 'ZTS' || 'NTS' }}"
     runs-on: ubuntu-20.04
     steps:
       - name: git checkout
@@ -56,9 +56,9 @@ jobs:
       - name: Create Oracle container
         uses: ./.github/actions/setup-oracle
       - name: apt
-        uses: ./.github/actions/apt-x64
+        uses: ./.github/actions/apt-x86_64
       - name: ./configure
-        uses: ./.github/actions/configure-x64
+        uses: ./.github/actions/configure-linux-x86_64
         with:
           configurationParameters: >-
             ${{ matrix.configuration_parameters }}
@@ -67,9 +67,9 @@ jobs:
       - name: make
         run: make -j$(/usr/bin/nproc) >/dev/null
       - name: make install
-        uses: ./.github/actions/install-linux
+        uses: ./.github/actions/install-linux-x86_64
       - name: Setup
-        uses: ./.github/actions/setup-x64
+        uses: ./.github/actions/setup-linux-x86_64
       - name: Test
         uses: ./.github/actions/test-linux
         with:
@@ -104,7 +104,7 @@ jobs:
             -d opcache.jit=1205
       - name: Verify generated files are up to date
         uses: ./.github/actions/verify-generated-files
-  LINUX_X32:
+  LINUX_X86:
     needs: GENERATE_MATRIX
     if: ${{ needs.GENERATE_MATRIX.outputs.branches != '[]' }}
     strategy:
@@ -113,7 +113,7 @@ jobs:
         branch: ${{ fromJson(needs.GENERATE_MATRIX.outputs.branches) }}
         debug: [true, false]
         zts: [true, false]
-    name: "${{ matrix.branch.name }}_LINUX_X32_${{ matrix.debug && 'DEBUG' || 'RELEASE' }}_${{ matrix.zts && 'ZTS' || 'NTS' }}"
+    name: "${{ matrix.branch.name }}_LINUX_X86_${{ matrix.debug && 'DEBUG' || 'RELEASE' }}_${{ matrix.zts && 'ZTS' || 'NTS' }}"
     runs-on: ubuntu-latest
     container:
       image: ubuntu:20.04
@@ -135,9 +135,9 @@ jobs:
         with:
           ref: ${{ matrix.branch.ref }}
       - name: apt
-        uses: ./.github/actions/apt-x32
+        uses: ./.github/actions/apt-x86
       - name: ./configure
-        uses: ./.github/actions/configure-x32
+        uses: ./.github/actions/configure-linux-x86
         with:
           configurationParameters: >-
             --${{ matrix.debug && 'enable' || 'disable' }}-debug
@@ -145,7 +145,7 @@ jobs:
       - name: make
         run: make -j$(/usr/bin/nproc) >/dev/null
       - name: make install
-        uses: ./.github/actions/install-linux-x32
+        uses: ./.github/actions/install-linux-x86
       - name: Test
         uses: ./.github/actions/test-linux
         with:
@@ -175,7 +175,7 @@ jobs:
             -d opcache.enable_cli=1
             -d opcache.jit_buffer_size=16M
             -d opcache.jit=1205
-  MACOS:
+  MACOS_X86_64:
     needs: GENERATE_MATRIX
     if: ${{ needs.GENERATE_MATRIX.outputs.branches != '[]' }}
     strategy:
@@ -194,7 +194,7 @@ jobs:
       - name: brew
         uses: ./.github/actions/brew
       - name: ./configure
-        uses: ./.github/actions/configure-macos
+        uses: ./.github/actions/configure-macos-x86_64
         with:
           configurationParameters: >-
             --${{ matrix.debug && 'enable' || 'disable' }}-debug
@@ -244,19 +244,19 @@ jobs:
       - name: Create Oracle container
         uses: ./.github/actions/setup-oracle
       - name: apt
-        uses: ./.github/actions/apt-x64
+        uses: ./.github/actions/apt-x86_64
       - name: Install gcovr
         run: sudo -H pip install gcovr
       - name: ./configure
-        uses: ./.github/actions/configure-x64
+        uses: ./.github/actions/configure-linux-x86_64
         with:
           configurationParameters: --enable-debug --disable-zts --enable-gcov
       - name: make
         run: make -j$(/usr/bin/nproc) >/dev/null
       - name: make install
-        uses: ./.github/actions/install-linux
+        uses: ./.github/actions/install-linux-x86_64
       - name: Setup
-        uses: ./.github/actions/setup-x64
+        uses: ./.github/actions/setup-linux-x86_64
       # We only test with OpCache, the difference in coverage is negligible
       - name: Test OpCache
         uses: ./.github/actions/test-linux
@@ -267,7 +267,7 @@ jobs:
       - name: Upload Test Coverage to Codecov.io
         if: always()
         run: bash <(curl -s https://codecov.io/bash)
-  COMMUNITY:
+  COMMUNITY_X86_64:
     needs: GENERATE_MATRIX
     if: ${{ needs.GENERATE_MATRIX.outputs.branches != '[]' }}
     strategy:
@@ -286,9 +286,9 @@ jobs:
         with:
           ref: ${{ matrix.branch.ref }}
       - name: apt
-        uses: ./.github/actions/apt-x64
+        uses: ./.github/actions/apt-x86_64
       - name: ./configure
-        uses: ./.github/actions/configure-x64
+        uses: ./.github/actions/configure-linux-x86_64
         with:
           configurationParameters: >-
             --enable-debug
@@ -298,7 +298,7 @@ jobs:
       - name: make
         run: make -j$(/usr/bin/nproc) >/dev/null
       - name: make install
-        uses: ./.github/actions/install-linux
+        uses: ./.github/actions/install-linux-x86_64
       - name: Setup
         run: |
           sudo service mysql start
@@ -382,7 +382,7 @@ jobs:
           if [ $EXIT_CODE -gt 128 ]; then
             exit 1
           fi
-  OPCACHE_VARIATION:
+  OPCACHE_VARIATION_X86_64:
     needs: GENERATE_MATRIX
     if: ${{ needs.GENERATE_MATRIX.outputs.branches != '[]' }}
     strategy:
@@ -401,18 +401,18 @@ jobs:
       - name: Create Oracle container
         uses: ./.github/actions/setup-oracle
       - name: apt
-        uses: ./.github/actions/apt-x64
+        uses: ./.github/actions/apt-x86_64
       - name: ./configure
-        uses: ./.github/actions/configure-x64
+        uses: ./.github/actions/configure-linux-x86_64
         with:
           configurationParameters: >-
             --enable-debug --disable-zts
       - name: make
         run: make -j$(/usr/bin/nproc) >/dev/null
       - name: make install
-        uses: ./.github/actions/install-linux
+        uses: ./.github/actions/install-linux-x86_64
       - name: Setup
-        uses: ./.github/actions/setup-x64
+        uses: ./.github/actions/setup-linux-x86_64
       - name: Test File Cache (prime shm)
         uses: ./.github/actions/test-linux
         with:
@@ -453,14 +453,14 @@ jobs:
             -d opcache.file_cache_only=1
       - name: Verify generated files are up to date
         uses: ./.github/actions/verify-generated-files
-  MSAN:
+  LINUX_MSAN_X86_64:
     needs: GENERATE_MATRIX
     if: ${{ needs.GENERATE_MATRIX.outputs.branches != '[]' }}
     strategy:
       fail-fast: false
       matrix:
         branch: ${{ fromJson(needs.GENERATE_MATRIX.outputs.branches) }}
-    name: "${{ matrix.branch.name }}_MSAN"
+    name: "${{ matrix.branch.name }}_LINUX_MSAN_X86_64"
     runs-on: ubuntu-22.04
     steps:
       - name: git checkout
@@ -468,7 +468,7 @@ jobs:
         with:
           ref: ${{ matrix.branch.ref }}
       - name: apt
-        uses: ./.github/actions/apt-x64
+        uses: ./.github/actions/apt-x86_64
       - name: ./configure
         run: |
           export CC=clang
