better Caddy install and detection

--- a/.github/actions/setup-caddy/action.yml
+++ b/.github/actions/setup-caddy/action.yml
@@ -4,10 +4,5 @@ runs:
   steps:
     - shell: bash
       run: |
-        sudo apt-get install -y debian-keyring debian-archive-keyring apt-transport-https
-        curl -1sLf 'https://dl.cloudsmith.io/public/caddy/stable/gpg.key' | sudo gpg --dearmor -o /usr/share/keyrings/caddy-stable-archive-keyring.gpg
-        curl -1sLf 'https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt' | sudo tee /etc/apt/sources.list.d/caddy-stable.list
-        sudo apt-get update
-        sudo apt-get install -y caddy
-
+        sudo curl 'https://caddyserver.com/api/download?os=linux&arch=amd64' > /usr/bin/caddy
         sudo caddy start --config ext/curl/tests/Caddyfile
