POC: Add ext/url

--- a/.github/actions/configure-macos/action.yml
+++ b/.github/actions/configure-macos/action.yml
@@ -47,6 +47,7 @@ runs:
           --enable-pcntl \
           --with-readline=/usr/local/opt/readline \
           --enable-mbstring \
+          --enable-url \
           --with-curl \
           --with-gettext=/usr/local/opt/gettext \
           --enable-sockets \
