--- a/.github/actions/configure-x32/action.yml
+++ b/.github/actions/configure-x32/action.yml
@@ -46,6 +46,7 @@ runs:
             --enable-pcntl \
             --with-readline \
             --enable-mbstring \
+            --enable-url \
             --with-curl \
             --with-gettext \
             --enable-sockets \
