--- a/.github/actions/configure-x64/action.yml
+++ b/.github/actions/configure-x64/action.yml
@@ -41,6 +41,7 @@ runs:
           --enable-pcntl \
           --with-readline \
           --enable-mbstring \
+          --enable-url \
           --with-curl \
           --with-gettext \
           --enable-sockets \
