--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,6 +28,7 @@ env:
   CXX: ccache g++
 jobs:
   LINUX_X64:
+    if: false
     services:
       postgres:
         image: postgres
@@ -89,6 +90,7 @@ jobs:
       - name: Verify generated files are up to date
         uses: ./.github/actions/verify-generated-files
   LINUX_X32:
+    if: false
     name: LINUX_X32_DEBUG_ZTS
     runs-on: ubuntu-latest
     container:
@@ -135,6 +137,7 @@ jobs:
             -d opcache.enable_cli=1
             -d opcache.jit_buffer_size=16M
   MACOS_DEBUG_NTS:
+    if: false
     runs-on: macos-11
     steps:
       - name: git checkout
@@ -172,6 +175,7 @@ jobs:
       - name: Verify generated files are up to date
         uses: ./.github/actions/verify-generated-files
   WINDOWS:
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -216,6 +220,7 @@ jobs:
       - name: Test
         run: .github/scripts/windows/test.bat
   BENCHMARKING:
+    if: false
     name: BENCHMARKING
     if: github.repository_owner == 'php' || github.event_name == 'pull_request'
     runs-on: ubuntu-22.04
